--- a/.github/workflows/release_helm_chart.yml
+++ b/.github/workflows/release_helm_chart.yml
@@ -7,10 +7,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        appVersion: 1.0.6
-        version: 0.0.2
+    env:
+      APP_VERSION: 1.0.6
+      VERSION: 0.0.2
 
     steps:
       - name: 
@@ -23,7 +22,7 @@ jobs:
 
       - name: Helm Package
         run: |
-          helm package deploy/kubernetes/helm  -d /root/helm/repo --app-version ${{ matrix.appVersion }} --version ${{ matrix.version }}
+          helm package deploy/kubernetes/helm  -d /root/helm/repo --app-version ${{ env.APP_VERSION }} --version ${{ env.VERSION  }}
           helm repo index /root/helm/repo --url ${{ secrets.DONGTAI_IAST_CHART_REPO_URL }}
 
       - name: Setup Ossutil
@@ -33,7 +32,7 @@ jobs:
           access-key-id: ${{ secrets.CHART_OSS_ACCESS_KEY_ID }}
           access-key-secret: ${{ secrets.CHART_OSS_ACCESS_KEY_SECRET }}
       - run: |
-          ossutil cp /root/helm/repo/dongtai-iast-${{ matrix.version }}.tgz  oss://dongtai-helm-charts/iast/
+          ossutil cp /root/helm/repo/dongtai-iast-${{ env.VERSION  }}.tgz  oss://dongtai-helm-charts/iast/
           ossutil cp /root/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
 
           
