--- a/.github/workflows/release_helm_chart.yml
+++ b/.github/workflows/release_helm_chart.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Helm Package
         run: |
-          helm package deploy/kubernetes/helm  -d /root/helm/repo --app-version ${{ env.APP_VERSION }} --version ${{ env.VERSION  }}
-          helm repo index /root/helm/repo --url ${{ secrets.DONGTAI_IAST_CHART_REPO_URL }}
+          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version ${{ env.APP_VERSION }} --version ${{ env.VERSION  }}
+          helm repo index ~/helm/repo --url ${{ secrets.DONGTAI_IAST_CHART_REPO_URL }}
 
       - name: Setup Ossutil
         uses: manyuanrong/setup-ossutil@v2.0
@@ -32,7 +32,7 @@ jobs:
           access-key-id: ${{ secrets.CHART_OSS_ACCESS_KEY_ID }}
           access-key-secret: ${{ secrets.CHART_OSS_ACCESS_KEY_SECRET }}
       - run: |
-          ossutil cp /root/helm/repo/dongtai-iast-${{ env.VERSION  }}.tgz  oss://dongtai-helm-charts/iast/
-          ossutil cp /root/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
+          ossutil cp ~/helm/repo/dongtai-iast-${{ env.VERSION  }}.tgz  oss://dongtai-helm-charts/iast/
+          ossutil cp ~/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
 
           
