Add helm package workflow4

--- a/.github/workflows/release_helm_chart.yml
+++ b/.github/workflows/release_helm_chart.yml
@@ -34,5 +34,4 @@ jobs:
       - run: |
           ossutil cp ~/helm/repo/dongtai-iast-${{ env.VERSION  }}.tgz  oss://dongtai-helm-charts/iast/
           ossutil cp -rf ~/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
-
-          
+          cat ~/helm/repo/index.yaml
