Add helm package workflow5

--- a/.github/workflows/release_helm_chart.yml
+++ b/.github/workflows/release_helm_chart.yml
@@ -7,9 +7,6 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    env:
-      APP_VERSION: 1.0.6
-      VERSION: 0.0.2
 
     steps:
       - name: 
@@ -22,7 +19,7 @@ jobs:
 
       - name: Helm Package
         run: |
-          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version ${{ env.APP_VERSION }} --version ${{ env.VERSION  }}
+          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version ${GITHUB_REF##*/} --version ${GITHUB_REF##*/}
           helm repo index ~/helm/repo --url ${{ secrets.DONGTAI_IAST_CHART_REPO_URL }}
 
       - name: Setup Ossutil
@@ -32,6 +29,6 @@ jobs:
           access-key-id: ${{ secrets.CHART_OSS_ACCESS_KEY_ID }}
           access-key-secret: ${{ secrets.CHART_OSS_ACCESS_KEY_SECRET }}
       - run: |
-          ossutil cp ~/helm/repo/dongtai-iast-${{ env.VERSION  }}.tgz  oss://dongtai-helm-charts/iast/
+          ossutil cp ~/helm/repo/dongtai-iast-${GITHUB_REF##*/}.tgz  oss://dongtai-helm-charts/iast/
           ossutil cp -rf ~/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
-          cat ~/helm/repo/index.yaml
+          
