--- a/.github/workflows/release_helm_chart.yml
+++ b/.github/workflows/release_helm_chart.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Helm Package
         run: |
-          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version $(echo ${GITHUB_REF#refs/heads/} --version $(echo ${GITHUB_REF#refs/heads/}
+          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version $(echo ${GITHUB_REF#refs/heads/}) --version $(echo ${GITHUB_REF#refs/heads/})
           helm repo index ~/helm/repo --url ${{ secrets.DONGTAI_IAST_CHART_REPO_URL }}
 
       - name: Setup Ossutil
@@ -29,6 +29,6 @@ jobs:
           access-key-id: ${{ secrets.CHART_OSS_ACCESS_KEY_ID }}
           access-key-secret: ${{ secrets.CHART_OSS_ACCESS_KEY_SECRET }}
       - run: |
-          ossutil cp ~/helm/repo/dongtai-iast-$(echo ${GITHUB_REF#refs/heads/}.tgz  oss://dongtai-helm-charts/iast/
+          ossutil cp ~/helm/repo/dongtai-iast-$(echo ${GITHUB_REF#refs/heads/}).tgz  oss://dongtai-helm-charts/iast/
           ossutil cp -rf ~/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
           
