--- a/.github/workflows/release_helm_chart.yml
+++ b/.github/workflows/release_helm_chart.yml
@@ -17,9 +17,14 @@ jobs:
           version: 'latest' # default is latest stable
         id: install
 
+
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+
       - name: Helm Package
         run: |
-          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version $(echo ${GITHUB_REF#refs/heads/}) --version $(echo ${GITHUB_REF#refs/heads/})
+          helm package deploy/kubernetes/helm  -d ~/helm/repo --app-version ${{ steps.get_version.outputs.VERSION }} --version ${{ steps.get_version.outputs.VERSION }}
           helm repo index ~/helm/repo --url ${{ secrets.DONGTAI_IAST_CHART_REPO_URL }}
 
       - name: Setup Ossutil
@@ -29,6 +34,6 @@ jobs:
           access-key-id: ${{ secrets.CHART_OSS_ACCESS_KEY_ID }}
           access-key-secret: ${{ secrets.CHART_OSS_ACCESS_KEY_SECRET }}
       - run: |
-          ossutil cp ~/helm/repo/dongtai-iast-$(echo ${GITHUB_REF#refs/heads/}).tgz  oss://dongtai-helm-charts/iast/
+          ossutil cp ~/helm/repo/dongtai-iast-${{ steps.get_version.outputs.VERSION }}.tgz  oss://dongtai-helm-charts/iast/
           ossutil cp -rf ~/helm/repo/index.yaml  oss://dongtai-helm-charts/iast/
           
